src/Orchestrator/src/Tests/FunctionalTests/Helpers/Errors/ThingAssessmentVerifierLottery__LotteryNotActiveError.cs
using Nethereum.ABI.FunctionEncoding.Attributes;

namespace Tests.FunctionalTests.Helpers.Errors;

[Error("ThingAssessmentVerifierLottery__LotteryNotActive")]
public class ThingAssessmentVerifierLottery__LotteryNotActiveError
{
    [Parameter("bytes32", "thingProposalId", 1)]
    public byte[] ThingProposalId { get; set; }
}